# MA

./: .gitignore  CMakeLists.txt  compile.sh  run_DiscreteShell.sh  run_EoLRods.sh  run_LinearShell.sh  run_MassSpring.sh  run_PBCevaluation.sh  run_QuadraticTriangle.sh
Projects/: CMakeLists.txt
Projects/DiscreteShell/: CMakeLists.txt
Projects/DiscreteShell/autodiff/: Quadratic2DShell.cpp  Quadratic2DShell.h
Projects/DiscreteShell/include/: App.h  DiscreteShell.h
Projects/DiscreteShell/src/: DiscreteShell.cpp  main.cpp
Projects/EoLRods/: CMakeLists.txt
Projects/EoLRods/autodiff/: EoLRodStretchingEnergy.h
Projects/EoLRods/include/: App.h  EoLRodSim.h  ObjectiveEnergy.h  OptimizationProblem.h  Rod.h  Scene.h  Util.h  damped_newton.h  vector_manipulation.h
Projects/EoLRods/optimization_output/: analyze.ipynb  main.cpp
Projects/EoLRods/src/: App.cpp  ConstitutiveLaw.cpp  EoLRodSim.cpp  ObjectiveEnergy.cpp  OptimizationProblem.cpp  RodStress.cpp  RodStressDiff.cpp  Scene.cpp  WindowHomogenization.cpp  damped_newton.cpp  main.cpp
Projects/Optimization/data/: clean_mesh.py  generate_mesh.ipynb  sun_mesh_line_face_tags.csv
Projects/Optimization/evaluation_output/: analyze.ipynb
Projects/Optimization/include/: LinearShell.h  LinearShell_EvalDiff.h  LinearShell_Stretching.h  MassSpring.h  MassSpring_StressDiff.h  MassSpring_Stretching.h  ObjectiveEnergy.h  OptimizationProblem.h  Scene.h  Simulation.h  Visualization.h  cost_function.h  damped_newton.h  enforce_matrix_constraints.h  vector_manipulation.h
Projects/Optimization/optimization_output/: analyze.ipynb
Projects/Optimization/source/: LinearShellEvaluation.cpp  LinearShellSimulation.cpp  LinearShellWindowEvaluation.cpp  MassSpringEvaluation.cpp  MassSpringSimulation.cpp  ObjectiveEnergy.cpp  OptimizationProblem.cpp  Scene.cpp  Visualization.cpp  cost_function.cpp  damped_newton.cpp  enforce_matrix_constraints.cpp
Projects/Optimization/source/apps/: linear_shell.cpp  mass_spring.cpp
Projects/PBCevaluation/data/: meta_periodic_face_tags.csv
Projects/PBCevaluation/data/Material4/: meta_periodic_face_tags.csv
Projects/PBCevaluation/include/: App.h  PBCevaluation.h  StiffnessTensor.h
Projects/PBCevaluation/src/: PBCevaluation.cpp  main.cpp
Projects/QuadraticTriangle/autodiff/: CST3DShell.h  Quadratic2DShell.cpp  Quadratic2DShell.h
Projects/QuadraticTriangle/data/: meta_periodic_face_tags.csv  sun_mesh_face_tags.csv
Projects/QuadraticTriangle/include/: App.h  QuadraticTriangle.h  StiffnessTensor.h
Projects/QuadraticTriangle/src/: KernelUtil.cpp  QuadraticEnergy.cpp  QuadraticTriangle.cpp  StressUtil.cpp  Tests.cpp  main.cpp
